--- a/css/app.css
+++ b/css/app.css
@@ -1,12 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700&display=swap');
-*{
+body{
   margin: 0;
   padding: 0;
-  outline: none;
-  box-sizing: border-box;
-  font-family: 'Montserrat', sans-serif;
-}
-body{
+  height: auto;
   background: #f2f2f2;
 }
 nav{
@@ -19,22 +15,11 @@ nav{
   padding: 0 100px;
 }
 nav .nav-items{
-  display: flex;
-  flex: 1;
-  padding: 0 0 0 40px;
-}
-nav .nav-items li{
+  margin-left: -630px;
   list-style: none;
-  padding: 0 15px;
-}
-nav .nav-items li a{
-  color: #fff;
-  font-size: 18px;
-  font-weight: 500;
-  text-decoration: none;
-}
-nav .nav-items li a:hover{
-  color: #ff3d00;
+	padding: 0 15px;
+	color: #ffff;
+	font-size: 25px;
 }
 nav form{
   display: flex;
@@ -52,6 +37,7 @@ nav form .search-data{
   color: #fff;
   font-size: 17px;
   border: none;
+  outline: none;
   font-weight: 500;
   background: none;
 }
@@ -83,7 +69,23 @@ nav .cancel-icon,
 nav .search-icon{
   display: none;
 }
-
+.logo{
+  margin-left: -60px;
+}
+/* Add butoon */
+.addbtn{
+  background: #1772db;
+  width: 70px;
+  height: 40px;
+  color: #fff;
+  cursor: pointer;
+  border: none;
+  outline: none;
+  border-radius: 5px;
+}
+.addbtn:hover{
+  background: #3d99e4;
+}
 .body-content {
   width: 80%;
   margin: auto;
@@ -97,22 +99,19 @@ table{
   width: 100%;
 }
 thead{
-  background: rgb(187, 141, 230);
+  color: #ffff;
+  font-weight: bold;
+  background: rgb(18, 185, 177);
 }
-th{
+th, tr, td{
   padding: 10px;
+  text-align: center;
 }
-tr, td{
-  padding: 10px;
-  margin: 10px;
-}
-
 p{
   margin: 10px;
   display: flex;
   justify-content: space-evenly;
 }
-
 select{
   padding: 10px;
 }
@@ -133,8 +132,8 @@ select{
   justify-content: space-between;
 }
 .form-container{
-  /* background: rgb(156, 232, 245); */
-  box-shadow: 0 4px 4px 1px rgba(0, 0, 0, 0.2);
+  border: 1px solid #6ea8e9;
+  display: none;
 }
 .label {
   margin-left: 10px;
@@ -144,6 +143,23 @@ select{
 .form-input {
   margin-right: 10px;
   width: 80%;
+}
+.button{
+  display: flex;
+}
+.btn-edit{
+font-weight: bold;
+cursor: pointer;
+border-radius: 5px;
+color: rgb(39, 120, 226);
+}
+.btn-delete{
+cursor: pointer;
+font-weight: bold;
+border-radius: 5px;
+color: rgb(226, 39, 39);
+border-radius: 2px;
+padding: 2px;
 }
 input[type="text"], 
 input[type="date"],
@@ -177,26 +193,11 @@ input[type="reset"]{
     color: #ffff;
     text-align: center;
     border-radius: 5px;
-    background: #1772db;
+    background: rgb(212, 48, 48);
 }
 input[type="submit"]:hover{
     background:#29dd6e;
 }
 input[type="reset"]:hover{
-    background: rgb(72, 138, 236);
-}
-.button{
-    display: flex;
-}
-.btn-edit{
-  font-weight: bold;
-  cursor: pointer;
-  border-radius: 5px;
-  color: rgb(39, 120, 226);
-}
-.btn-delete{
-  cursor: pointer;
-  font-weight: bold;
-  border-radius: 5px;
-  color: rgb(226, 39, 39);
+  background: rgb(231, 74, 74);
 }
