--- a/css/app.css
+++ b/css/app.css
@@ -3,53 +3,52 @@ body{
   margin: 0;
   padding: 0;
   height: auto;
-  background: #f2f2f2;
+  background: #d4d3d373;
 }
-/* header */
 nav{
-  background: #171c24;
+  height: 70px;
   display: flex;
   flex-wrap: wrap;
-  align-items: center;
-  justify-content: space-between;
-  height: 70px;
   padding: 0 100px;
+  align-items: center;
+  background: #171c24;
+  justify-content: space-between;
 }
 nav .nav-items{
-  margin-left: -600px;
-  list-style: none;
-	padding: 0 15px;
 	color: #ffff;
 	font-size: 25px;
+  padding: 0 15px;
+  list-style: none;
+  margin-left: -575px;
 }
 nav form{
-  display: flex;
   height: 40px;
   padding: 2px;
+  display: flex;
+  border-radius: 2px;
   background: #1e232b;
   min-width: 18%!important;
-  border-radius: 2px;
   border: 1px solid rgba(155,155,155,0.2);
 }
 nav form .search-data{
   width: 100%;
   height: 100%;
-  padding: 0 10px;
-  color: #fff;
-  font-size: 17px;
   border: none;
   outline: none;
+  color: #fff;
+  padding: 0 10px;
+  font-size: 17px;
   font-weight: 500;
   background: none;
 }
 nav form button{
-  padding: 0 15px;
+  border: none;
   color: #fff;
   font-size: 17px;
-  background: #ff3d00;
-  border: none;
-  border-radius: 2px;
+  padding: 0 15px;
   cursor: pointer;
+  border-radius: 2px;
+  background: #ff3d00;
 }
 nav form button:hover{
   background: #e63600;
@@ -58,154 +57,160 @@ nav .menu-icon,
 nav .cancel-icon,
 nav .search-icon{
   width: 40px;
-  text-align: center;
+  display: none;
+  color: #fff;
   margin: 0 50px;
   font-size: 18px;
-  color: #fff;
   cursor: pointer;
-  display: none;
+  text-align: center;
 }
 nav .menu-icon span,
 nav .cancel-icon,
 nav .search-icon{
   display: none;
 }
-
 .logo{
   margin-left: -60px;
 }
-/* Add butoon */
 .addbtn{
-  background: #1772db;
   width: 70px;
+  border: none;
   height: 40px;
+  outline: none;
   color: #fff;
   cursor: pointer;
-  border: none;
-  outline: none;
+  font-size: 15px;
   border-radius: 5px;
+  background: #1772db;
+  box-shadow: 0 4px 4px 1px rgba(0, 0, 0, 0.295);
 }
 .addbtn:hover{
   background: #3d99e4;
 }
-
-/* body */
 .body-content {
   width: 78%;
   margin: auto;
 }
-
-/* Table content */
 table{
-  border-collapse: collapse;
   width: 100%;
+  border-collapse: collapse;
 }
 thead{
-  font-size: 20px;
   color: #ffff;
+  font-size: 20px;
   font-weight: bold;
   background: rgb(18, 174, 185);
 }
-th, tr, td{
+table th, tr, td{
   padding: 10px;
   text-align: center;
 }
-p{
-  margin: 10px;
-  display: flex;
-  justify-content: space-evenly;
-}
 .tabel-container{
-  border: 1px solid#000;
   padding: 15px;
+  border: 1px solid#000;
 }
-.table-container{
-  box-shadow: 0 4px 4px 1px rgba(0, 0, 0, 0.2);
-  max-width: 100%;
-  height: auto;
-  margin-left: auto;
-  margin-right: auto;  	
-  font-family: Open Sans;
-  background-color: white;
-}
-/* Form content */
-.form-content {
+.form-content{
   display: flex;
   justify-content: space-between;
 }
-.form-container{
-  border: 1px solid #6ea8e9;
-  display: none;
+.table-container{
+  height: auto;
+  max-width: 100%;
+  margin-left: auto;
+  margin-right: auto;  	
+  font-family: Open Sans;
+  background: rgba(255, 255, 255, 0.938);
+  box-shadow: 0 4px 4px 1px rgba(0, 0, 0, 0.2);
 }
-.label {
-  margin-left: 10px;
-  width: 10%;
-  font-size: 17px;
+.form-container{
+  display: none;
+  border: 1px solid #6ea8e9;
+  background: rgba(255, 255, 255, 0.938);
+  box-shadow: 0 4px 4px 1px rgba(5, 5, 5, 0.267);
 }
 select{
   padding: 10px;
 }
-#country{
-  border: 1px solid #6ea8e9;
-}
-.form-input {
-  margin-right: 10px;
-  width: 80%;
-}
 .button{
   display: flex;
 }
+.label {
+  width: 10%;
+  font-size: 17px;
+  margin-left: 10px;
+}
+.form-input {
+  width: 80%;
+  margin-right: 10px;
+}
+#class{
+  border: 1px solid #6ea8e9;
+}
 .btn-edit{
-  font-weight: bold;
   cursor: pointer;
-  border-radius: 5px;
+  font-weight: bold;
   color: rgb(39, 120, 226);
 }
 .btn-delete{
   cursor: pointer;
   font-weight: bold;
-  border-radius: 5px;
-  color: rgb(226, 39, 39);
-  border-radius: 2px;
-  padding: 2px;
+  color: rgb(226, 39, 39);  
 }
 input[type="text"], 
 input[type="date"],
 input[type="email"],
 input[type="number"]{
   width: 100%;
-  box-sizing: border-box;
-  padding: 12px 20px;
   margin: 8px 0;
-  display: inline-block;
-  border: 1px solid #ccc;
   border-radius: 5px;
+  padding: 12px 20px;
+  display: inline-block;
+  box-sizing: border-box;
+  border: 1px solid #ccc;
 }
-input[type="submit"]{
+#submit{
   width: 70px;
   margin: 10px;
   height: 40px;
   border: none;
   outline: none;
   color: #ffff;
+  cursor: pointer;
   text-align: center;
   border-radius: 5px;
   background: rgb(33, 182, 53);
 }
-input[type="reset"]{
+#update{
+  width: 70px;
+  margin: 10px;
+  height: 40px;
+  border: none;
+  outline: none;
+  display: none;
+  color: #ffff;
+  cursor: pointer;
+  text-align: center;
+  border-radius: 5px;
+  background: rgb(49, 206, 75);
+}
+#cancel{
   width: 70px;
   margin: 10px;
   height: 40px;
   border: none;
   outline: none;
   color: #ffff;
+  cursor: pointer;
   text-align: center;
   border-radius: 5px;
-  background: rgb(212, 48, 48);
+  background: rgb(207, 35, 35);
 }
-input[type="submit"]:hover{
+#submit:hover{
+  background:#2ccf6b;
+}
+#update:hover{
   background:#29dd6e;
 }
-input[type="reset"]:hover{
-  background: rgb(231, 74, 74);
+#cancel:hover{
+  background: rgb(233, 70, 70);
 }
